--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ Todo.txt++ 0.5.0
 * Expand the editor to fill all available screen space.
 * Extend session expiration as the user interacts with the app, and session
   lifetime to 7 days.
-
+* Save on "Ctrl/Cmd+S". Expand auto-save to a min of 5 seconds.
 
 Todo.txt++ 0.4.0
 --------------------------------------------------------------------------------
